--- a/index.html
+++ b/index.html
@@ -2,49 +2,61 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>styling_biography</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Styled Biography</title>
     <style>
       body {
-        background-color: #fff;
+        background-color: #f5f5f5;
         color: #333;
         font-family: Arial, Helvetica, sans-serif;
-        padding: 1em;
+        padding: 2em;
         margin: auto;
+        max-width: 800px;
+        border-radius: 10px;
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
       }
 
       h1 {
-        color: hotpink;
-        font-size: 2em;
-        font-family: Georgia, "Times New Roman", Times, serif;
-        border-bottom: 1px solid #375e97;
-        border-bottom: dotted purple;
+        color: #4a90e2;
+        font-size: 2.5em;
+        font-family: 'Georgia', 'Times New Roman', Times, serif;
+        border-bottom: 2px solid #4a90e2;
+        padding-bottom: 0.3em;
       }
 
       h2 {
         font-style: italic;
-        font-size: 1.5em;
+        font-size: 1.8em;
+        margin-top: 1.5em;
       }
 
       .job-title {
-        color: #999999;
+        color: #555;
         font-weight: bold;
+        font-size: 1.2em;
       }
 
       a:link,
       a:visited {
-        color: #fb6542;
-      }
-
-      a:hover {
-        color: green;
+        color: #e67e22;
         text-decoration: none;
       }
 
+      a:hover {
+        color: #d35400;
+        text-decoration: underline;
+      }
+
       ul {
-        background-color: #eeeeee;
-        border: 5px solid purple;
-        padding: 2em;
+        background-color: #ffffff;
+        border: 3px solid #4a90e2;
+        padding: 1.5em;
+        border-radius: 10px;
+        list-style-type: none;
+      }
+
+      ul li {
+        margin-bottom: 0.5em;
       }
     </style>
   </head>
